--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,6 @@ coverage.xml
 *.pot
 
 # Django stuff:
-*.log
 local_settings.py
 db.sqlite3
 db.sqlite3-journal
@@ -130,3 +129,7 @@ dmypy.json
 
 # VS Code
 .vscode/
+
+*.log
+*.dat
+*.pdf
